--- a/Exercício_IMDB.ipynb
+++ b/Exercício_IMDB.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCHdxE+6PgMtbn8Z3amoln",
+      "authorship_tag": "ABX9TyNnCKNFdmm48/VGCC6KNrax",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,34 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SibeleTatiana/WebAggregat/blob/main/Exerc%C3%ADcio_IMDB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercírio_IMDB\n",
+        "\n",
+        "RM_552915\n",
+        "\n",
+        "Aluna_Sibele_Tatiana"
+      ],
+      "metadata": {
+        "id": "BFJ1IXNuWKzt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Vamos criar uma regressão linear ou logística para prever o IMDB_Rating.\n",
+        "\n",
+        "Utilizar as melhores colunas do dataset, desprezar colunas não informativas. Tratar as informações para obter o melhor r2 possível.\n",
+        "\n",
+        "Utilizar 75% para treino e 25% para teste.\n",
+        "\n",
+        "Comparar o r2 obtido com treino e teste. Se r2 de teste tiver diferença superior a +/-20% em relação ao r2 de treino, então considera-se que houve overfit."
+      ],
+      "metadata": {
+        "id": "a8DO84601t-Z"
+      }
     },
     {
       "cell_type": "code",
